# minifix

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD_opti_plan.md  PRD_optimize.md  PRD_production_ready.md  PRD_redux.md  PRD_sbe.md  PRD_tokio.md  README.md  count_loc.sh  final_optimized_codegen.rs  final_optimized_generated_fix44.rs  optimized_codegen.rs  optimized_generated_fix44.rs  prep_for_publish.sh  publish_in_order.sh  test_compatibility.rs
crates/minifix/: Cargo.toml  build.rs
crates/minifix-codegen/: Cargo.toml
crates/minifix-codegen/src/: lib.rs
crates/minifix-derive/: Cargo.toml
crates/minifix-derive/src/: derive_fix_value.rs  lib.rs
crates/minifix-dictionary/: Cargo.toml
crates/minifix-dictionary/src/: builder.rs  fix_datatype.rs  lib.rs  quickfix.rs
crates/minifix/benches/: fix_decode.rs
crates/minifix/src/: buffer.rs  definitions.rs  field_access.rs  lib.rs  prelude.rs  tokio.rs  utils.rs
crates/minifix/src/field_types/: checksum.rs  date.rs  mod.rs  monthyear.rs  multiple_chars.rs  multiple_strings.rs  primitives.rs  time.rs  timestamp.rs  tz.rs  tz_time.rs  tz_timestamp.rs  utils_chrono.rs  utils_decimal.rs  utils_rust_decimal.rs  validation_config.rs
crates/minifix/src/json/: decoder.rs  encoder.rs  mod.rs
crates/minifix/src/session/: backends.rs  config.rs  connection.rs  environment.rs  errs.rs  event_loop.rs  heartbeat_rule.rs  mod.rs  resend_request_range.rs  seq_numbers.rs  tokio_connection.rs  tokio_event_loop.rs
crates/minifix/src/tagvalue/: decoder.rs  encoder.rs  mod.rs  raw_decoder.rs  tokio_decoder.rs  utils.rs
crates/minifix/src/tokio/: client.rs  config.rs
crates/minisofh/: Cargo.toml
crates/minisofh/src/: encoding_type.rs  frame.rs  lib.rs  tokio_codec.rs
docs/: release-notes.md
examples/: basic.rs
examples/async_client/: Cargo.toml
examples/async_client/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/market_data/: Cargo.toml
examples/market_data/src/: main.rs
tests/: test.rs
tests/codegen_fix44/: Cargo.toml  build.rs
tests/codegen_fix44/src/: generated_fix44.rs  lib.rs
tests/test_regression_tainted_decoder_fix44/: Cargo.toml
tests/test_regression_tainted_decoder_fix44/src/: lib.rs
