[package]
name = "minifix"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# https://stackoverflow.com/q/61417452/
# Test locally using `RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[lib]
name = "minifix"

[[bench]]
name = "fix_decode"
harness = false

[features]
default = [ "utils-chrono", "utils-tokio" ]
codegen = [ "minifix-codegen" ]
derive = []
json-encoding = []
fix40 = [ "minifix-dictionary/fix40" ]
fix41 = [ "minifix-dictionary/fix41" ]
fix42 = [ "minifix-dictionary/fix42" ]
fix43 = [ "minifix-dictionary/fix43" ]
fix50 = [ "minifix-dictionary/fix50" ]
fix50sp1 = [ "minifix-dictionary/fix50sp1" ]
fix50sp2 = [ "minifix-dictionary/fix50sp2" ]
fixt11 = [ "minifix-dictionary/fixt11" ]
# Third-party crate integration.
utils-bytes = [ "bytes" ]
utils-chrono = []
utils-decimal = [ "decimal" ]
utils-rust-decimal = [ "rust_decimal" ]
utils-slog = [ "slog" ]
utils-tokio = [ "tokio-util", "utils-bytes" ]

full = [
	"codegen",
	"derive",
	"fix40",
	"fix41",
	"fix42",
	"fix43",
	"fix50",
	"fix50sp1",
	"fix50sp2",
	"fixt11",
	"json-encoding",
	"utils-bytes",
	"utils-chrono",
	"utils-decimal",
	"utils-rust-decimal",
	"utils-slog",
	"utils-tokio",
]

[dependencies]
bytes = { version = "1", optional = true }
chrono = "0.4"
decimal = { version = "2", optional = true }
minifix-codegen = { version = "0.1", path = "../minifix-codegen", optional = true }
minifix-derive = { version = "0.1", path = "../minifix-derive" }
minifix-dictionary = { version = "0.1", path = "../minifix-dictionary" }
futures = "0.3"
futures-timer = "3"
nohash-hasher = "0.2"
rust_decimal = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
slog = { version = "2", optional = true }
thiserror = "1"
tokio-util = { version = "0.7", optional = true, features = ["codec", "compat"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
chrono = "0.4"
minifix-codegen = { version = "0.1", path = "../minifix-codegen" }
minifix-dictionary = { version = "0.1", path = "../minifix-dictionary" }
lazy_static = "1"
quick-xml = "0.31"
roxmltree = "0.19"

[dev-dependencies]
arbitrary = { version = "1.0", features = ["derive"] }
criterion = { version = "0.3", features = ["html_reports"] }
enum-as-inner = "0.6"
quickcheck = "1"
quickcheck_derive = "0.3"
quickcheck_macros = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
syn = { version = "1", features = ["parsing"] }
